--- a/src/App.css
+++ b/src/App.css
@@ -1,43 +1,39 @@
-/* App.css */
 #root {
-  max-width: 1280px;
+  width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.App {
+  text-align: center;
+  position: relative;
+  overflow: hidden;
+  height: 100vh; /* Ensure the App covers the full viewport height */
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.cursor {
+  position: absolute;
+  pointer-events: none;
+  font-size: 24px;
+  color: #ffff66;
+  z-index: 1000;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.content {
+  position: relative;
+  z-index: 10;
 }
 
-.card {
-  padding: 2em;
+/* Parallax Layers */
+.parallax-layer {
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh; /* Ensure the parallax layers cover the full viewport height */
 }
 
-.read-the-docs {
-  color: #888;
+/* Adjust background size to fit the screen width */
+.parallax-layer {
+  background-size: 150% auto; /* Adjust as needed */
 }
