--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 #root {
-  width: 1280px;
-  margin: 0 auto;
+  width: 100%;
   text-align: center;
 }
 
@@ -30,10 +29,37 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100vh; /* Ensure the parallax layers cover the full viewport height */
+  width: 100%;
+  height: 100vh;
+  z-index: 1; /* Ensure this is lower than the sidebar's z-index */
+}
+.navbar {
+  display: flex;
+  justify-content: center;
+  background: linear-gradient(to right, #ff4000, black, rgb(138, 110, 110), #ff4000);
+  padding: 1rem 0;
+  position: fixed;
+  width: 100%;
+  z-index: 100;
 }
 
-/* Adjust background size to fit the screen width */
-.parallax-layer {
-  background-size: 150% auto; /* Adjust as needed */
+.navbar a {
+  color: rgb(252, 249, 249);
+  text-decoration: none;
+  margin: 0 1rem;
+  font-size: 1.2rem;
+  transition: color 0.3s ease;
+}
+
+.navbar a.active,
+.navbar a:hover {
+  color: #bb0a0a;
+  background-color: white;
+  padding: 0.5rem 1rem;
+  border-radius: 8px;
+}
+
+/* Ensure sections have enough space from the top to not be hidden by the navbar */
+section {
+  padding-top: 4rem;
 }
