--- a/src/index.css
+++ b/src/index.css
@@ -2,13 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
+@keyframes glow {
+  0% {
+    filter: brightness(1.0) drop-shadow(0 0 10px rgba(255, 255, 255, 0.8));
+  }
+  50% {
+    filter: brightness(.8) drop-shadow(0 0 25px rgba(255, 255, 255, 1));
+  }
+  100% {
+    filter: brightness(.8) drop-shadow(0 0 10px rgba(255, 255, 255, 0.8));
+  }
+}
+
+.animate-glow {
+  animation: glow 4s infinite;
+}
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  /* Removed the Mars-like gradient background */
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -62,13 +77,17 @@ button:focus-visible {
   }
 }
 
-.App {
-  text-align: center;
+.gradient-text-layer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.box {
-  width: 100px;
-  height: 100px;
-  background-color: #61dafb;
-  margin: 20px auto;
+.gradient-text {
+  background: -webkit-linear-gradient(45deg, #FFA500, #FFFFFF);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 3em;
+  font-weight: bold;
 }
+
