--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+/* App.css */
 #root {
   width: 100%;
   text-align: center;
@@ -7,7 +8,7 @@
   text-align: center;
   position: relative;
   overflow: hidden;
-  height: 100vh; /* Ensure the App covers the full viewport height */
+  height: 100vh;
 }
 
 .cursor {
@@ -23,7 +24,6 @@
   z-index: 10;
 }
 
-/* Parallax Layers */
 .parallax-layer {
   background-attachment: fixed;
   background-position: center;
@@ -31,8 +31,9 @@
   background-size: cover;
   width: 100%;
   height: 100vh;
-  z-index: 1; /* Ensure this is lower than the sidebar's z-index */
+  z-index: 1;
 }
+
 .navbar {
   display: flex;
   justify-content: center;
@@ -59,7 +60,33 @@
   border-radius: 8px;
 }
 
-/* Ensure sections have enough space from the top to not be hidden by the navbar */
 section {
   padding-top: 4rem;
 }
+
+.bio-box-layer {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.bio-box {
+  background: linear-gradient(to right, #FF4000, white);
+  padding: 10px;
+  border-radius: 10px;
+  text-align: center;
+  max-width: 400px; 
+  height: 200px;
+  right: -400px;
+  top: 200px;
+  font-size: 0.9em; 
+  position: relative;
+}
+.gradient-text-welcome {
+  background: -webkit-linear-gradient(45deg, #FF0000, #FFFFFF);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 2em;
+  font-weight: bold;
+}
+
