--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 /* App.css */
+/* App.css */
 #root {
   width: 100%;
   text-align: center;
@@ -76,9 +77,9 @@ section {
   border-radius: 10px;
   text-align: center;
   max-width: 400px; 
-  height: 200px;
+  height: 170px;
   right: -400px;
-  top: 200px;
+  top: -100px;
   font-size: 0.9em; 
   position: relative;
 }
@@ -89,4 +90,72 @@ section {
   font-size: 2em;
   font-weight: bold;
 }
+.portfolio-section {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  padding: 20px;
+}
 
+.project-card {
+  width: 300px; 
+  height: 400px; 
+  perspective: 1000px;
+  background-color: transparent;
+}
+
+.project-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  border-radius: 10px;
+}
+
+.project-card:hover .project-card-inner {
+  transform: rotateY(180deg);
+}
+
+.project-card-front, .project-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.project-card-front {
+  background-color: #fff;
+  color: black;
+}
+
+.project-card-front h3 {
+  margin-bottom: 10px; 
+}
+
+.project-card-back {
+  background: linear-gradient(to right, #FF4000, white); /* Match the bio box color */
+  color: white;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+
+.project-card-back a {
+  color: blue; 
+  text-decoration: none;
+  margin: 10px 0;
+}
