--- a/src/App.css
+++ b/src/App.css
@@ -70,7 +70,7 @@ section {
 }
 
 .bio-box {
-  background: linear-gradient(to right, #FF4000, white);
+  
   padding: 10px;
   border-radius: 10px;
   text-align: center;
@@ -79,11 +79,11 @@ section {
   right: -400px;
   top: -100px;
   font-size: 0.9em; 
-  position: relative;
+  position: absolute;
 }
 
 .gradient-text-welcome {
-  background: -webkit-linear-gradient(45deg, #FF0000, #FFFFFF);
+  background: -webkit-linear-gradient(45deg, #b8390b, #FFFFFF);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-size: 2em;
@@ -159,11 +159,18 @@ section {
   text-decoration: none;
   margin: 10px 0;
 }
+.project-card-front img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; 
+  border-radius: 10px; 
+}
+
 
 .navigation-buttons {
   display: flex;
   justify-content: space-between;
-  width: 80%;
+  width: 95%;
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
@@ -209,19 +216,29 @@ section {
   transform: translate(-50%, -50%) rotate(-45deg);
 }
 
+/* Add this to your existing App.css or a new CSS file */
 .contact-section {
-  background: linear-gradient(to bottom, red, black);
+  background: linear-gradient(to bottom, #b8390b, white);
   padding: 20px;
   border-radius: 10px;
   color: white;
+  width: 80%;
+  max-width: 600px;
+  text-align: center;
 }
 
-.contact-form {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
+.cv-download {
+  display: inline-block;
+  margin-top: 20px;
+  padding: 10px 20px;
+  background-color: #FF4500;
+  color: white;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
 }
 
-.contact-form label {
-  font-weight: bold;
+.cv-download:hover {
+  background-color: #FF6347;
 }
+
