--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,8 @@
-#root {
-  width: 100%;
-  text-align: center;
-}
+/* App.css */
 
-.App {
-  text-align: center;
-  position: relative;
-  overflow: hidden;
-  height: 100vh;
-}
+
+
+
 
 .cursor {
   position: absolute;
@@ -53,11 +47,44 @@
 
 .navbar a.active,
 .navbar a:hover {
-  color: #bb0a0a;
+  color: #f10c0c;
   background-color: white;
   padding: 0.5rem 1rem;
   border-radius: 8px;
 }
+.navbar a:hover {
+  color: #f5250e; 
+  background-color: white;
+  padding: 0.5rem 1rem;
+  border-radius: 8px;
+}
+
+/* Dropdown Button */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+
+.dropdown-content {
+  display: block;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+
+.dropdown-content a:hover {background-color: #f1f1f1}
 
 section {
   padding-top: 4rem;
@@ -94,15 +121,23 @@ section {
   justify-content: center;
   align-items: center;
   height: 100vh; 
-
+  margin-top: -30px; 
+  position: relative;
+}
+.portfolio-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; 
+  margin-top: -530px; 
 }
 .gradient-text-portfolio {
-  background: -webkit-linear-gradient(45deg, #FFA500, #FFFFFF);
+  background: -webkit-linear-gradient(45deg, #b8390b, #FFFFFF);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-size: 2em;
   font-weight: bold;
-  top: -130px;
+  top: -350px;
   position: relative;
 }
 
@@ -174,13 +209,7 @@ section {
   object-fit: cover; 
   border-radius: 10px; 
 }
-.portfolio-section {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh; 
-  margin-top: -230px; 
-}
+
 .navigation-buttons {
   display: flex;
   justify-content: space-between;
@@ -229,5 +258,96 @@ section {
 .arrow.right {
   transform: translate(-50%, -50%) rotate(-45deg);
 }
+.contact-section {
+  margin-top: 300px;
+}
+
+.contact-section h2 {
+  top: 600px;
+  position: relative;
+}
 
 
+.contact-section form {
+  background-color: rgba(255, 255, 255, 0.0); /* Fully transparent background */
+  padding: 20px;
+  border-radius: 10px;
+  position: relative;
+  top: -600px;
+}
+.transparent-form {
+  background-color: transparent !important;
+  border: none !important;
+}
+
+.transparent-form label,
+.transparent-form input,
+.transparent-form textarea,
+.transparent-form button {
+  background-color: transparent;
+  border: 1px solid #ccc;
+  color: #000;
+}
+
+.transparent-form input,
+.transparent-form textarea {
+  width: 100%;
+  padding: 10px;
+  margin: 10px 0;
+  border-radius: 5px;
+}
+
+.transparent-form button {
+  background-color: #007bff;
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.transparent-form button:hover {
+  background-color: #0056b3;
+}
+
+
+
+.contact-section form label,
+.contact-section form input,
+.contact-section form textarea,
+.contact-section form button {
+  color: #000; 
+}
+
+.contact-section form input,
+.contact-section form textarea {
+  width: 100%;
+  padding: 10px;
+  margin: 10px 0;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: rgba(255, 255, 255, 0.7); 
+}
+
+.contact-section form button {
+  background-color: #007bff;
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.contact-section form button:hover {
+  background-color: #0056b3;
+}
