--- a/src/index.css
+++ b/src/index.css
@@ -16,14 +16,13 @@
 .App {
   text-align: center;
   position: relative;
-  overflow: hidden;
-  height: 100vh;
+ background-size: cover;
 }
 .animate-glow {
   animation: glow 4s infinite;
 }
 
-:root {
+/* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -33,7 +32,7 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
+} */
 
 a {
   font-weight: 500;
